--- a/index.html
+++ b/index.html
@@ -457,5 +457,16 @@
         const root = ReactDOM.createRoot(document.getElementById('root'));
         root.render(<MatchApp />);
     </script>
+    <script>
+  const firebaseConfig = {
+    apiKey: "AIzaSyD-w1R19Mg3ogu0u6gKmGXR7-_3GQv0pMW",
+    authDomain: "mivatch.firebaseapp.com",
+    projectId: "mivatch",
+    storageBucket: "mivatch.firebasestorage.app",
+    messagingSenderId: "234483024970",
+    appId: "1:234483024970:web:5ef32c4e8bf089778512b3"
+  };
+</script>
 </body>
+
 </html>
