--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+    <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-app-compat.js"></script>
     <title>Miva Titans vs UniLag FC - Live Tracker</title>
     
     <!-- Tailwind CSS -->
@@ -470,3 +471,4 @@
 </body>
 
 </html>
+
