--- a/index.html
+++ b/index.html
@@ -455,6 +455,14 @@
             );
         };
 
+<div id="root" style="text-align:center; padding: 20px;">
+    <h1>🔴 LIVE Match Tracker: Miva Titans vs Unilag FC</h1>
+    <h3 id="status-message">Connecting to real-time feed...</h3>
+    
+    <div id="real-time-updates" style="margin-top: 40px; border: 1px solid #ccc; padding: 20px; min-height: 100px;">
+        <p>Scores will load here...</p>
+    </div>
+</div>
         
     </script>
     <script>
@@ -470,5 +478,6 @@
 </body>
 
 </html>
+
 
 
