Update print statement from 'Hello' to 'Goodbye'

--- a/index.html
+++ b/index.html
@@ -454,7 +454,8 @@
                 </div>
             );
         };
-
+ </script>
+    </script>     
 <div id="root" style="text-align:center; padding: 20px;">
     <h1>🔴 LIVE Match Tracker: Miva Titans vs Unilag FC</h1>
     <h3 id="status-message">Connecting to real-time feed...</h3>
@@ -478,6 +479,7 @@
 </body>
 
 </html>
+
 
 
 
