--- a/index.html
+++ b/index.html
@@ -476,9 +476,13 @@
     appId: "1:234483024970:web:5ef32c4e8bf089778512b3"
   };
 </script>
+    // Initialize Firebase and Firestore reference
+const app = firebase.initializeApp(firebaseConfig);
+const db = firebase.firestore(app);
 </body>
 
 </html>
+
 
 
 
